<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/accepted_list_of_jobs_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.worker.WorkerModeAcceptedJobsListActivity">

    <TextView
        android:id="@+id/worker_mode_accepted_jobs_title"
        android:layout_width="299dp"
        android:layout_height="47dp"
        android:text="@string/worker_mode_accepted_jobs_title"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/accepted_jobs_list_recycler_view"
        android:layout_width="402dp"
        android:layout_height="537dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.917" />
</androidx.constraintlayout.widget.ConstraintLayout>