<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/user_mode_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.generalUser.UserModesActivity">

    <TextView
        android:id="@+id/current_user_welcome"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.527" />

    <Button
        android:id="@+id/user_mode_employee_button"
        android:layout_width="181dp"
        android:layout_height="93dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="124dp"
        android:backgroundTint="#07DA0F"
        android:text="@string/employee"
...
